# ssX-e16

./: .gitignore  .indent.pro  COMPLIANCE  ChangeLog  ChangeLog.sh  Makefile.am  README.md  configure.ac  e16.spec.in  meson.build  meson_options.txt
.github/workflows/: build-omv.yml
config/: Makefile.am  actionclasses.cfg  bindings.cfg  definitions  desktop.menu  e16keyedit.db  enlightenment.menu  maintenance.menu  matches.cfg  meson.build  settings.menu  strings.c  strings.py  winops.menu  winops_groups.menu  winops_layer.menu  winops_misc.menu  winops_opacity.menu  winops_size.menu
doc/: meson.build
docs/: Makefile.am  e16.asc  e16.man.in  e16.xml
dox/: Makefile.am  dox.c  dox.h  file.c  format.c  meson.build  text.c  ttfont.c
eesh/: E.h  Makefile.am  comms.c  main.c  meson.build
epp/: Makefile.am  cppalloc.c  cpperror.c  cppexp.c  cpphash.c  cpphash.h  cpplib.c  cpplib.h  cppmain.c  meson.build
fonts/: meson.build
icons/: meson.build
lib/: Makefile.am  e16_hack.c  e16_trip.c  meson.build
m4/: ec_attribute.m4  ec_visibility.m4  ec_warnflags.m4
misc/: Makefile.am  starte16.in
pix/: meson.build
po/: POTFILES.in  ar.po  bg.po  bs.po  ca.po  cs.po  csb.po  da.po  de.po  en_US.po  eo.po  es.po  fo.po  fr.po  gl.po  hr.po  hu.po  it.po  ja.po  ko.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
sample-scripts/: bouncingball.pl  bouncingball.py  lcdmover.sh  place-pagers.pl  shade-pagers.pl  shade-pagers.py  testroller.pl  testroller.py
scripts/: Makefile.am  e_cache_clean  e_cache_query  e_gen_menu  e_gen_menu.pl  meson.build
src/: E.h  Makefile.am  about.c  aclass.c  aclass.h  actions.c  alert.c  alert.h  animation.c  animation.h  arrange.c  backgrounds.c  backgrounds.h  borders.c  borders.h  buttons.c  buttons.h  comms.c  comms.h  conf.h  config.c  container.c  container.h  coords.c  cursors.c  cursors.h  desktops.c  desktops.h  dialog.c  dialog.h  dock.c  draw.c  ecompmgr.c  ecompmgr.h  econfig.c  econfig.h  edbus.c  edbus.h  edebug.h  edge.c  (+120 more)
themes/: winter.etheme
